# wgpu_playground

./: .codecov.yml  .gitattributes  .gitignore  API_COVERAGE_TRACKER.md  API_REFERENCE_IMPLEMENTATION_SUMMARY.md  API_REFERENCE_PANEL.md  API_REFERENCE_PANEL_MOCKUP.md  BACKEND_COMPARISON.md  BACKEND_SWITCH_UI.md  BACKEND_SWITCH_UI_MOCKUP.md  BIND_GROUP_IMPLEMENTATION.md  BIND_GROUP_VISUALIZATION.md  BIND_GROUP_VISUALIZATION_IMPLEMENTATION.md  BIND_GROUP_VISUALIZATION_MOCKUP.md  CANVAS_TESTING.md  COMMAND_RECORDING_IMPLEMENTATION.md  COMMAND_RECORDING_UI_MOCKUP.md  COMPUTE_DISPATCH_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_PRESETS.md  CONTRIBUTING.md  COVERAGE.md  COVERAGE_BADGES_MOCKUP.md  CREATE_ISSUES_README.md  Cargo.toml  DAWN_INTEGRATION_SUMMARY.md  DEVELOPER_GUIDE.md  EXAMPLE_COVERAGE_BADGES.md  FINAL_SUMMARY.md  GITHUB_PAGES_DEPLOYMENT_FIX.md  GUI_FRAMEWORK_EVALUATION.md  HOT_RELOAD_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_STATE_SAVE_LOAD.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_REALTIME_VALIDATION.md  IMPLEMENTATION_SUMMARY_RESOURCE_INSPECTOR.md  IMPLEMENTATION_URL_SHARING.md  LICENSE  PERFORMANCE_PANEL.md  PLAN.md  (+27 more)
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: README.md  benchmarks.yml  ci.yml  coverage.yml  dawn-ci.yml  dependabot-auto-merge.yml  docs.yml  native-builds.yml  pr-checks.yml  release.yml  security-audit.yml  security-deny.yml  wasm-builds.yml
assets/: README.md
assets/models/: cube.3mf
assets/shaders/: example.wgsl  indirect_drawing.wgsl  indirect_drawing_compute.wgsl  instanced_rendering.wgsl  triangle.wgsl  (+14 more)
crates/wgpu_playground_core/: Cargo.toml  build.rs
crates/wgpu_playground_core/benches/: README.md  buffer_operations.rs  shader_compilation.rs
crates/wgpu_playground_core/examples/: state_demo.rs
crates/wgpu_playground_core/fuzz/: Cargo.toml
crates/wgpu_playground_core/fuzz/fuzz_targets/: fuzz_buffer_descriptor.rs  fuzz_math_utils.rs  fuzz_shader_module.rs
crates/wgpu_playground_core/src/: adapter.rs  adapter_selection.rs  api_coverage.rs  api_coverage_panel.rs  api_reference_panel.rs  assets.rs  bind_group.rs  bind_group_layout_panel.rs  bind_group_panel.rs  bind_group_viz.rs  buffer.rs  buffer_inspector.rs  buffer_panel.rs  buffer_preview.rs  code_generator.rs  command_encoder.rs  command_recording_panel.rs  compute.rs  compute_dispatch_panel.rs  compute_pass_encoder.rs  compute_pipeline.rs  compute_pipeline_panel.rs  console.rs  dawn_wrapper.rs  device_config.rs  device_info.rs  draw_command_panel.rs  error.rs  example_metadata.rs  examples.rs  implementation.rs  learning_path.rs  learning_path_panel.rs  lib.rs  math_utils.rs  model_loader.rs  model_loader_panel.rs  performance_metrics.rs  performance_panel.rs  pipeline_debugger.rs  (+29 more)
crates/wgpu_playground_core/src/visual_regression/: mod.rs  test_utils.rs
crates/wgpu_playground_core/tests/: adapter_selection_integration_test.rs  api_coverage_integration_test.rs  api_reference_panel_test.rs  backend_conformance_suite.rs  backend_crosscheck_test.rs  bind_group_viz_test.rs  bindgroup_integration_test.rs  buffer_integration_test.rs  buffer_preview_test.rs  command_encoder_edge_cases_test.rs  command_encoder_integration_test.rs  command_sequence_integration_test.rs  compute_pass_integration_test.rs  compute_pipeline_integration_test.rs  compute_pipeline_panel_integration_test.rs  compute_real_workload_test.rs  dawn_integration_test.rs  debugging_utilities_integration_test.rs  error_handling_test.rs  implementation_integration_test.rs  model_loader_integration_test.rs  pipeline_layout_integration_test.rs  preset_panel_test.rs  preset_test.rs  query_set_integration_test.rs  queue_integration_test.rs  render_bundle_integration_test.rs  render_pass_integration_test.rs  render_pipeline_integration_test.rs  resource_inspector_integration_test.rs  sampler_integration_test.rs  settings_panel_test.rs  shader_editor_integration_test.rs  shader_hot_reload_test.rs  shader_integration_test.rs  state_integration_test.rs  surface_integration_test.rs  texture_integration_test.rs  texture_preview_test.rs  theme_workflow_test.rs  (+7 more)
crates/wgpu_playground_core/tests/common/: mod.rs
crates/wgpu_playground_examples/: Cargo.toml
crates/wgpu_playground_examples/examples/: advanced_compute_blur.rs  backend_selection.rs  compute_pass.rs  compute_render_sharing.rs  error_handling.rs  indirect_drawing.rs  instanced_rendering.rs  lighting_shadows.rs  multisampling.rs  particle_system.rs  post_processing.rs  render_bundle.rs  render_to_texture.rs  rotating_cube.rs  shader_loading.rs  threedmf_viewer.rs  triangle.rs
crates/wgpu_playground_examples/shaders/: particle_system_compute.wgsl  particle_system_render.wgsl
crates/wgpu_playground_examples/src/: adapter_demo.rs  lib.rs  shader_example.rs  texture_mapping.rs
crates/wgpu_playground_gui/: Cargo.toml
crates/wgpu_playground_gui/src/: app.rs  main.rs
docs/: ACCESSIBILITY.md  BACKEND_COMPARISON_TESTING.md  BENCHMARKING.md  BIND_GROUP_UI.md  BIND_GROUP_UI_VISUAL.md  BRANCH_PROTECTION.md  BUFFER_CONFIG_PANEL.md  BUFFER_PREVIEW.md  BUFFER_PREVIEW_IMPLEMENTATION_SUMMARY.md  BUFFER_PREVIEW_UI_MOCKUP.md  BUILDING_DAWN.md  CI_TESTING.md  COMPUTE_DISPATCH_UI_MOCKUP.md  COMPUTE_PIPELINE_UI.md  COMPUTE_PIPELINE_UI_MOCKUP.md  CONFORMANCE_TESTING.md  DAWN_CI_SETUP.md  DEBUGGING_UTILITIES.md  DEVELOPER_GUIDE.md  DEVICE_CONFIG_UI.md  DEVICE_CONFIG_UI_MOCKUP.md  ERROR_HANDLING.md  EXPORT_TO_STANDALONE.md  IMPLEMENTATION_SUMMARY.md  PR_CHECKS_SUMMARY.md  QUICK_START.md  README.md  RENDER_PASS_CONFIG_UI.md  RENDER_PASS_UI_MOCKUP.md  RENDER_PIPELINE_UI.md  RESOURCE_INSPECTOR.md  SAMPLER_CONFIG_PANEL.md  SAMPLER_IMPLEMENTATION_SUMMARY.md  SAMPLER_UI_MOCKUP.md  SHADER_EDITOR.md  SHADER_EDITOR_VISUAL_GUIDE.md  TEXTURE_CONFIG_PANEL.md  TEXTURE_CONFIG_UI_MOCKUP.md  USER_GUIDE.md  VISUAL_REGRESSION_TESTING.md  (+6 more)
scripts/: compare_example.sh  configure-branch-protection.sh  coverage.sh
src/: app.rs  compute.rs  device_info.rs  main.rs  rendering.rs
web/: README.md  index.html
(+6 files in other folders)
