[package]
name = "wgpu_playground_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core WebGPU functionality for wgpu_playground"

[features]
# Dawn WebGPU implementation support (cross-platform)
# Enables Dawn C++ implementation via FFI bindings
# Requires CMake and C++ build tools
# Note: Building from source, not using dawn-sys due to compatibility issues
dawn = []

[dependencies]
wgpu = { version = "22.1", features = ["wgsl"] }
wgpu-core = "22.1"
wgpu-types = "22.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
egui = "0.29"
egui-wgpu = "0.29"
egui_plot = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
futures-channel = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

# Dawn FFI bindings (optional) - currently using custom bindings
# dawn-sys has compatibility issues on Linux, so we build our own
# dawn-sys = { version = "1.0", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuDeviceDescriptor",
    "GpuBuffer",
    "GpuBufferDescriptor",
    "GpuTexture",
    "GpuTextureDescriptor",
    "GpuTextureFormat",
    "GpuCanvasContext",
] }
js-sys = "0.3"

[build-dependencies]
# Build dependencies for Dawn integration
cc = "1.2"

[dev-dependencies]
pollster = "0.3"
serial_test = "3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
