[package]
name = "wgpu_playground_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core WebGPU functionality for wgpu_playground"

[features]
# Dawn WebGPU implementation support (cross-platform)
# Enables Dawn C++ implementation via FFI bindings
# Requires CMake and C++ build tools
# Note: Building from source, not using dawn-sys due to compatibility issues
dawn = []

[dependencies]
wgpu = { version = "28.0", features = ["wgsl"] }
wgpu-core = "27.0"
wgpu-types = "28.0"
naga = { version = "27.0", features = ["wgsl-in"] }
winit = "0.30"
env_logger = "0.11"
log = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui_plot = "0.34"
bytemuck = { version = "1.14", features = ["derive"] }
futures-channel = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
gltf = { version = "1.4", default-features = false, features = ["import", "utils"] }
tobj = { version = "4.0", default-features = false }

# File watching for shader hot reload (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "7.0", default-features = false, features = ["macos_kqueue"] }
webbrowser = "1.1"

# Dawn FFI bindings (optional) - currently using custom bindings
# dawn-sys has compatibility issues on Linux, so we build our own
# dawn-sys = { version = "1.0", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuDeviceDescriptor",
    "GpuBuffer",
    "GpuBufferDescriptor",
    "GpuTexture",
    "GpuTextureDescriptor",
    "GpuTextureFormat",
    "GpuCanvasContext",
    "console",
    "Navigator",
    "Performance",
    "Location",
    "Storage",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomRect",
    "MouseEvent",
    "CssStyleDeclaration",
] }
js-sys = "0.3"

[build-dependencies]
# Build dependencies for Dawn integration
cc = "1.2"

[dev-dependencies]
pollster = "0.4"
serial_test = "3.0"

# Criterion doesn't support WASM, so only include it for native targets
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# WASM-specific test dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "buffer_operations"
harness = false

[[bench]]
name = "shader_compilation"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
