[package]
name = "wgpu_playground_examples"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Examples for wgpu_playground"

[dependencies]
wgpu_playground_core = { path = "../wgpu_playground_core" }
wgpu = { version = "22.1", features = ["wgsl"] }
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
bytemuck = { version = "1.14", features = ["derive"] }

[[bin]]
name = "adapter_demo"
path = "src/adapter_demo.rs"
