[package]
name = "wgpu_playground_gui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GUI application for wgpu_playground"

[[bin]]
name = "wgpu_playground"
path = "src/main.rs"

[dependencies]
wgpu_playground_core = { path = "../wgpu_playground_core" }
wgpu = "22.1"
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = { version = "1.19", features = ["derive"] }
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "GpuDeviceDescriptor",
    "GpuBuffer",
    "GpuBufferDescriptor",
    "GpuTexture",
    "GpuTextureDescriptor",
    "GpuTextureFormat",
    "GpuCanvasContext",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
